# turs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  turs.plugin.zsh
.github/workflows/: main.yml
src/: cli.rs  defaults.rs  main.rs  precmd.rs  prompt.rs  rprompt.rs
