[package]
authors = ["eikendev"]
name = "turs"
version = "0.0.7"
description = "A Purs-inspired prompt"
edition = "2018"
homepage = "https://github.com/eikendev/turs"
repository = "https://github.com/eikendev/turs.git"
readme = "README.md"
license = "MIT"

[dependencies]
ansi_term = "^0.12"
clap = "^2.33"
dirs = "^3.0"
git2 = "^0.13"
human-panic = "1.0.3"
tico = "^2.0"
