[package]
authors = ["eikendev"]
name = "turs"
version = "0.0.8"
description = "A Purs-inspired prompt"
edition = "2021"
homepage = "https://github.com/eikendev/turs"
repository = "https://github.com/eikendev/turs.git"
readme = "README.md"
license = "MIT"

[dependencies]
ansi_term = "^0.12"
clap = "^3.0.0"
dirs = "^4.0"
git2 = "^0.16.0"
human-panic = "^1.1.0"
tico = "^2.0"
